# ABM

./: .cursorrules  .gitignore  CLAUDE.md  README.md  Tom Snijders From The Source.md.txt  agents.md  pyproject.toml  requirements.txt
.claude/: instructions.md  settings.local.json
.claude/agents/: code_quality_assurance.md  elite_tester.md  frank_and_eef_phd_supervisor.md  hypothesis_hunter.md  ihnwhi_the_grinder.md  master_orchestrator.md  nouri_the_mad_genius.md  research_methodologist.md  saom_specialist.md  simulation_engineer.md  statistical_analyst.md  strategic_planner.md  tolerance_theory_expert.md  tom_snijders_agent.md  visualization_virtuoso.md
.claude/docs/: agent_overview.md  expanded_agent_ecosystem.md
.claude/prompts/: coordination_protocol.md  expanded_coordination_protocol.md  master_activation_protocol.md  project_kickoff.md
.claude/templates/: advanced_workflow_systems.md  agent_interaction_template.md  agent_spawning_protocols.md  master_orchestration_framework.md
R/: RSIENA_DEMONSTRATION_SUMMARY.md  custom_effects_demo.R  example_data_generator.R  final_rsiena_comprehensive_demo.R  final_tolerance_data_generator.R  intervention_simulation_demo.R  master_data_generator.R  rsiena_demo_usage_guide.md  setup_r_environment.py  setup_r_packages.R  test_r_integration.R  test_rsiena_integration.py  tolerance_basic_demo.R  tolerance_intervention_rsiena_demo.R  tolerance_rsiena_demo_simple.R
R/demonstrations/: complete_research_workflows.R  custom_effects_guide.R  tolerance_intervention_advanced.R
dissertation/: BULLETPROOF_RENDERING_STRATEGY.md  COMPLETE_DISSERTATION_READY.tex  OVERLEAF_CHECKLIST.md  build.bat  check_latex_environments.py  fix_images.py  fix_latex_braces.py  main.bcf  main.lof  main.lot  main.run.xml  main.tex  references.bib
internal/: Advanced Critique.txt  ELITE_VALIDATION_CERTIFICATION.md  Essential Resources.md  FINAL_DEMO_STATUS_REPORT.md  Links and documentation.txt  PhD_Defense_Readiness_Assessment.md  Templates and initial repo design.txt  Tom Snijders From The Source.md
qa_framework/: __init__.py
resources/: ESSENTIAL_RESEARCH_RESOURCES.md  META_RESEARCH_AGENT_PROMPT.md
scripts/: final_demo_test_suite.py  run_complete_demo.py  run_tolerance_demos.py
src/: __init__.py  advanced_visualization_system.py  final_publication_visualization_suite.py  final_visualization_generator.py  rigorous_saom_demo.py  tolerance_data_generator.py  tolerance_demo_simple.py  tolerance_intervention_complete_demo.py
tests/: README.md  __init__.py  test_data_processing.py  test_intervention_simulations.py  test_rsiena_integration.py  test_runner.py  test_statistical_analysis.py  test_visualizations.py
(+85 files in other folders)
